@@ -1,3 +1,11 @@
+Wed Dec 16 00:25:41 2015  Naohisa Goto  <ngotogenome@gmail.com>
+
+	* lib/webrick/utils.rb (WEBrick::Utils::TimeoutHandler#initialize):
+	  TimeoutMutex should be acquired when accessing @timeout_info.
+	  To avoid deadlock, interrupt() calls are delayed.
+	  Due to the mutex, it is safe to treat ary without ary.dup.
+	  [Bug #11742] [ruby-dev:49387]
+
 Tue Dec 15 23:13:10 2015  Naohisa Goto  <ngotogenome@gmail.com>
 
 	* gc.c: Delete excess semicolon after RUBY_ALIAS_FUNCTION().
